# hermanar2

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  hermanar.db  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: cuotas.rs  familias.rs  hermanos.rs  mod.rs
src/app/: global.css  provider.tsx  router.tsx
src/app/routes/: home.tsx  layout.tsx
src/app/routes/cuotas/: editar.tsx  generar.tsx  gestion.tsx  index.tsx  nueva.tsx  pagar.tsx
src/app/routes/familias/: editar.tsx  index.tsx  nueva.tsx
src/app/routes/hermanos/: detalle.tsx  editar.tsx  index.tsx  nuevo.tsx
src/components/: nueva-familia-modal.tsx
src/components/ui/: card.tsx  input.tsx  modal.tsx  select.tsx  table.tsx  toast.tsx
src/contexts/: toast-context.tsx
src/types/: index.ts
